--- a/bonus/index2.html
+++ b/bonus/index2.html
@@ -16,6 +16,26 @@
                 Super MarioBool
             </h1>
         </div>
+        <section class="text-center container text-white">
+            <div class="col-3">
+                <span>Mario 
+                    001600 
+                </span>
+            </div>
+            <div class="col-3">
+                <span> x02 
+                    </span>
+            </div>
+            <div class="col-3">
+               <span> World
+                1-1 
+            </span>
+            </div>
+            <div class="col-3">
+                <span>Time
+                157 </span>
+            </div>
+        </section>
             <section class="first container">
                 <div class="col-6 text-center">
                     <img src="../bonus/incognita.jpg" alt="">  
@@ -30,10 +50,7 @@
                 <img src="../bonus/mario.jpg" alt="mario">
                 </div>
             </section>
-            <section class=" empty container">
-                <div class="col-6"></div>
-                <div class="col-6"></div>
-            </section>
+           
             <section class="third container">
                 <div class="col-2 col-offset-5">
                     <img src="../bonus/fungo.jpg" alt="">
